@@ -32,68 +32,68 @@ namespace CIAO_Hello_Sender_comp_Impl
   //============================================================
   // Component Executor Implementation Class: Sender_comp_exec_i
   //============================================================
-  
+
   Sender_comp_exec_i::Sender_comp_exec_i (void)
   {
   }
-  
+
   Sender_comp_exec_i::~Sender_comp_exec_i (void)
   {
   }
-  
+
   // Supported operations and attributes.
-  
+
   // Component attributes and port operations.
-  
+
   // Operations from Components::SessionComponent.
-  
+
   void
   Sender_comp_exec_i::set_session_context (
     ::Components::SessionContext_ptr ctx)
   {
     this->ciao_context_ =
       ::Hello::CCM_Sender_comp_Context::_narrow (ctx);
-    
+
     if ( ::CORBA::is_nil (this->ciao_context_.in ()))
       {
         throw ::CORBA::INTERNAL ();
       }
   }
-  
+
   void
   Sender_comp_exec_i::configuration_complete (void)
   {
     /* Your code here. */
   }
-  
+
   void
   Sender_comp_exec_i::ccm_activate (void)
   {
     /* Your code here. */
   }
-  
+
   void
   Sender_comp_exec_i::ccm_passivate (void)
   {
     /* Your code here. */
   }
-  
+
   void
   Sender_comp_exec_i::ccm_remove (void)
   {
     /* Your code here. */
   }
-  
+
   extern "C"  ::Components::EnterpriseComponent_ptr
   create_Hello_Sender_comp_Impl (void)
   {
     ::Components::EnterpriseComponent_ptr retval =
       ::Components::EnterpriseComponent::_nil ();
-    
+
     ACE_NEW_NORETURN (
       retval,
       Sender_comp_exec_i);
-    
+
     return retval;
   }
 }
